# gemini-cli

./: .gitignore  Cargo.toml  readme.md
src/: alpha_vantage.rs  command.rs  email.rs  file_edit.rs  main.rs  search.rs  spinner.rs
