[package]
name = "gemini-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
ctrlc = "3.1"
chrono = "0.4"
scraper = "0.13"
urlencoding = "2.1"
hashbrown = "0.14"
build-time = "0.1"
once_cell = "1.19"
regex = "1.5"
difference = "2.0"
rustyline = "12.0.0"
dirs = "5.0"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
clap = { version = "4.0", features = ["derive"] }

[profile.dev]
debug = false
strip = "debuginfo"
codegen-units = 1
lto = "fat"